# esperanto-python

./: README.md  pyproject.toml  requirements.txt
esperanto_python/: esperanto_data.py  hazarda.py  hook.py  ממשק.py
hebrew_python/: esperanto_data.py  ipython.py
