[tool.poetry]
name = "esperanto_python"
version = "0.1.0"
description = "Write Python in Esperanto"
authors = ["JolonB <jolon.behrent@gmail.com>"]
license = "BSD-4-Clause"
readme = "README.md"
homepage = "https://github.com/JolonB/esperanto-python"
repository = "https://github.com/JolonB/esperanto-python"
# documentation = ""
keywords = ["esperanto", "translation", "python", "repl"]

[tool.poetry.dependencies]
python = "^3.7" # main
ideas = "^0.0.22" # main
# friendly = {git = "https://github.com/matan-h/friendly"} #I Can't have direct dependency of my fork of friendly. I hope It will marge soon to main friendly
rich = "^13.3.5" # 12.6.0 is compatible with Python3.6

# optional
# friendly = { version ="^0.4.14",optional = true }
friendly-traceback = { version ="^0.4.36",optional = true}

[tool.poetry.extras]
    errors = ["friendly","friendly-traceback"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
eopy = 'esperanto_python.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/JolonB/esperanto-python/issues"